# api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  dockerfile  generate_data.py  generate_jwt.py  justfile  main.py  poetry.toml  pyproject.toml  readme.md
.github/workflows/: cicd.yaml
src/: __init__.py
src/adapter/: __init__.py
src/adapter/internal/: __init__.py
src/adapter/internal/cache/memorydb/: service.py
src/adapter/internal/cache/redisdb/: service.py
src/adapter/internal/database/memorydb/: __init__.py  service.py
src/adapter/internal/database/mongodb/: __init__.py  service.py
src/adapter/internal/memorydb/: __init__.py  service.py
src/adapter/internal/mongodb/: __init__.py  models.py  service.py
src/app/: __init__.py
src/app/http/: __init__.py  common.py  server.py
src/app/http/routes/: __init__.py  dataset.py  oauth.py  telegram.py
src/app/http/telegram/: bot.py  info.py  routers.py  states.py  utils.py
src/domain/: __init__.py
src/domain/exception/: __init__.py  auth.py  base.py  database.py  service.py
src/domain/model/: __init__.py  allocation.py  form_field.py  format_entity.py  participant.py  participants.py  preference.py  room.py  user.py
src/domain/model/scalar/: __init__.py  object_id.py
src/protocol/: __init__.py
src/protocol/internal/: __init__.py
src/protocol/internal/cache/: __init__.py  generic.py
src/protocol/internal/database/: __init__.py  allocation.py  form_field.py  mixin.py  participant.py  participants.py  preference.py  room.py  user.py
src/scripts/: polyfactory_mongo.py
src/service/: __init__.py  allocation.py  answer.py  base.py  common.py  form_field.py  participant.py  preference.py  room.py  user.py
src/service/internal/: __init__.py
src/service/user/: create.py
src/tests/test_adapters/test_database/: test_allocation.py  test_answer.py  test_form_field.py  test_participants.py  test_preference.py  test_room.py  test_user.py
src/tests/test_adapters/test_oauth/: test_telegram.py
src/utils/: __init__.py
src/utils/logger/: __init__.py  logger.py
